Various small style updates: -Show message on courseSearch.jsp that leaving both input fields blank will display all courses -Fixed instructorPage.jsp not showing correct description for each course -Updated styling of inputs on createCommunity.jsp to match rest of site -Added indicators on communityView.jsp that inviting another student has not yet been implemented -Added another indicator on profile.jsp on inputs that can't be edited -Made coming soon indicator used on communityView.jsp, profile.jsp and instructorHome.jsp more visible -Made width of containers on instructorPage.jsp larger than the width of the ratings controls so that when opening ratings controls everything doesn't expand -Made inputs more visible because you actually can't see them that well on courseSearch.jsp, joinCommunity.jsp, and createCommunity.jsp -Made post comment input more visible on courseView.jsp comments tab

--- a/WebServer/webapps/ROOT/Styles/styles.css
+++ b/WebServer/webapps/ROOT/Styles/styles.css
@@ -804,9 +804,9 @@ header div #you {
 }
 #joinCourseContainer input {
     outline: none;
-    /* border: 1px solid #00000050; */
     border: none;
-    box-shadow: 0 0 3px #00000040;
+    border: 1px solid #00000030;
+    box-shadow: 0 0 10px #00000050;
     border-radius: 15px;
     padding-left: 1em;
     padding-right: 1em;
@@ -846,7 +846,8 @@ header div #you {
     font-weight: bold;
     color: var(--accentColor);
 }
-.courseSearch .search .bigDescription {
+.courseSearch .search .notice {
+    margin-top: 0.1em;
     margin-bottom: 1em;
 }
 .courseSearch .search div {
@@ -865,8 +866,8 @@ header div #you {
     width: 75%;
     border-radius: 10px;
     border: none;
-    /* border: 1px solid #00000070; */
-    box-shadow: 0 0 3px #00000040;
+    border: 1px solid #00000030;
+    box-shadow: 0 0 5px #00000050;
     outline: none;
     padding: 0.5em;
     padding-left: 0.75em;
@@ -971,7 +972,9 @@ header div #you {
 .createCommunity input {
     outline: none;
     border-radius: 8px;
-    border: 1px solid #00000050;
+    border: none;
+    /* border: 1px solid #00000050; */
+    box-shadow: 0 0 5px #00000070;
     padding: 1em;
     font-size: 1em;
     height: 2.5em;
@@ -1024,6 +1027,18 @@ header div #you {
 .communityView .controls button {
     display: flex;
     align-items: center;
+    height: 1em;
+}
+.communityView .controls .noClick {
+    transition: 0s;
+}
+.communityView .controls .noClick:hover {
+    background-color: var(--bgColor);
+    /* color: var(--accentColor); */
+    color: #a0a0a0;
+    /* border-color: var(--accentColor); */
+    border-color: #a0a0a0;
+    cursor: not-allowed;
 }
 .communityView .title {
     margin-left: 1em;
@@ -1059,6 +1074,7 @@ header div #you {
     flex-direction: row;
     align-items: center;
     margin-bottom: 0.75em;
+    width: 35em;
 }
 
 #ratingContainer {
@@ -1284,23 +1300,6 @@ header div #you {
 }
 .instructorCoursePreview .controls .notyet:hover {
     cursor: not-allowed;
-}
-.instructorCoursePreview .controls .notyet:hover > .editSoon {
-    display: flex;
-}
-.instructorCoursePreview .controls button .editSoon {
-    position: absolute;
-    z-index: 5;
-    margin-top: -3.5em;
-    background-color: grey;
-    padding: 0.75em;
-    border-radius: 20px;
-    font-weight: bold;
-    font-size: 1.2em;
-    color: black;
-    display: flex;
-    align-items: center;
-    display: none;
 }
 .instructorCoursePreview .controls form .delete, .instructorCoursePreview .controls .delete img {
     filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(-50deg) brightness(80%) contrast(119%);
@@ -1651,22 +1650,6 @@ header div #you {
 .profile .profileSettings div:not(:last-of-type) {
     margin-bottom: 2em;
 }
-.profile .profileSettings div .comingSoon {
-    position: absolute;
-    margin-left: 0.5em;
-    margin-top: -1.8em;
-    background-color: #00000050;
-    padding: 0.2em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    border-radius: 20px;
-    font-weight: 500;
-    display: none;
-}
-
-.profile .profileSettings div .comingSoonContainer:hover > .comingSoon {
-    display: flex;
-}
 .profile .profileSettings div p:first-of-type {
     font-weight: 500;
     font-size: 1.2em;
@@ -1681,11 +1664,11 @@ header div #you {
 .profile .profileSettings div input:focus {
     color: var(--accentLighterColor)
 }
-.profile .profileSettings div .nonedit:hover {
-    cursor: not-allowed;
-}
+.profile .profileSettings div .nonedit:hover, 
 .profile .profileSettings div .nonedit:focus {
-    color: black;
+    cursor: not-allowed;
+    color: #787878;
+    border-color: lightgrey;
 }
 .profile .profileSettings div .passwordToggleIcon {
     position: absolute;
@@ -1924,7 +1907,7 @@ header div #you {
     padding: 0.5em;
     margin-top: 2em;
     border-radius: 50px;
-    background-color: #00409020;
+    background-color: #d7d7d7;
     width: fit-content;
     align-self: center;
     align-items: center;
@@ -1953,6 +1936,7 @@ header div #you {
     border-radius: 20px;
     margin: 0;
     margin-left: -2.5em;
+    background-color: transparent;
 }
 .courseView #comments #postCommmentContainer button:hover {
     cursor: pointer;
@@ -2041,7 +2025,28 @@ header div #you {
     justify-content: flex-start;
 }
 
+/* show comming soon message when hover over element */
+
+.comingSoon {
+    position: absolute;
+    margin-left: 0.5em;
+    margin-top: -1.8em;
+    background-color: #d8d8d8;
+    box-shadow: 0 0 10px grey;
+    padding: 0.2em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    border-radius: 20px;
+    font-weight: 500;
+    display: none;
+}
+
+.comingSoonContainer:hover > .comingSoon {
+    display: flex;
+}
+
 /* custom 404 page */
+
 .errorContainer {
     display: flex;
     flex-direction: column;
